classDiagram
PokerHand "1" -- "5" PlayingCard
Deck "1" -- "52" PlayingCard
VideoPokerService "1" -- "1" Deck
VideoPokerService "1" -- "1" PokerHand
VideoPokerService "1" -- "1" Dealer
VideoPokerService "1" -- "n" PokerHandEvaluator
VideoPokerService "1" -- "1" GameRepository
PokerHandEvaluator "1" -- "n" HandValue
GameRepository "1" -- "n" HandValue
UserInterface  "1"--"1" VideoPokerService
Game "1" -- "1" VideoPokerService
Game "n" -- "1" GameRepository
